- fix for the file sync issue
git-svn-id: http://fritzing.googlecode.com/svn/trunk@92 85f94c43-f63a-0410-9d22-21439860c375